# libpkgstate

./: COPYRIGHT  DESIGN.md  Doxyfile  HISTORY.md  MIGRATION.md  README.md  STORAGE.md  TESTING.md  meson.build  meson.options
.github/workflows/: build.yml  ci.yml
adapter/: meson.build  plan_adapter.cpp
ci/: configure-and-test.sh  installed-core-consumer.cpp  installed-plan-consumer.cpp  lint-manpages.sh  qualify-installed.sh
include/libpkgstate/: canonical_generation_store.h  canonical_store.h  digest.h  error.h  installed_control.h  installed_package.h  legacy_completeness.h  legacy_import.h  legacy_installed_package.h  legacy_snapshot.h  legacy_text_store.h  libpkgstate.h  owned_entry.h  package_identity.h  package_path.h  package_release.h  publication_receipt.h  publication_request.h  snapshot.h  state_target_binding.h  store.h  write_transaction.h
include/libpkgstate-plan/: adapter.h
man/: libpkgstate.3.scdoc  meson.build  pkginfo.1.scdoc  pkgstate-check.1.scdoc  pkgstate-db.5.scdoc  pkgstate-generation.5.scdoc  pkgstate_authority.7.scdoc  pkgstate_canonical_generation_store.3.scdoc  pkgstate_legacy_compatibility.3.scdoc  pkgstate_legacy_import.3.scdoc  pkgstate_legacy_text_store.3.scdoc  pkgstate_model.3.scdoc  pkgstate_plan_adapter.3.scdoc  pkgstate_publication.3.scdoc  pkgstate_store.3.scdoc
src/: canonical_generation_store.cpp  canonical_record.cpp  canonical_record.h  canonical_store.cpp  digest.cpp  error.cpp  generation_codec.cpp  generation_codec.h  installed_control.cpp  installed_package.cpp  legacy_import.cpp  legacy_installed_package.cpp  legacy_snapshot.cpp  legacy_text_store.cpp  meson.build  owned_entry.cpp  package_identity.cpp  package_path.cpp  package_release.cpp  publication_projection.cpp  publication_projection.h  publication_receipt.cpp  publication_request.cpp  snapshot.cpp  state_target_binding.cpp
tests/: canonical_generation_store_test.cpp  canonical_record_test.cpp  canonical_store_test.cpp  ci_qualification_source_test.sh  digest_test.cpp  documentation_source_test.sh  installed_control_test.cpp  legacy_completeness_test.cpp  legacy_import_test.cpp  legacy_model_test.cpp  legacy_text_store_test.cpp  locking_test.cpp  meson.build  model_test.cpp  package_path_conformance_test.cpp  package_path_test.cpp  package_release_test.cpp  pkgconfig_metadata_test.sh  pkginfo_cli_test.sh  pkginfo_manual_test.sh  pkgstate_check_cli_test.sh  pkgstate_check_fixture.cpp  pkgstate_check_manual_test.sh  plan_adapter_metadata_test.sh  plan_adapter_test.cpp  public_header_test.cpp  publication_receipt_test.cpp  publication_request_test.cpp  release_metadata_test.sh  snapshot_identity_test.cpp  state_target_binding_test.cpp  temp_directory.h  test.h  umbrella_header_test.cpp  write_transaction_test.cpp
tools/: meson.build  pkginfo.cpp  pkgstate_check.cpp
