option(
  'link_mode',
  type: 'combo',
  choices: ['shared', 'static'],
  value: 'shared',
  description: 'How libpkgstate links against external dependencies',
)

option(
  'tests',
  type: 'feature',
  value: 'enabled',
  description: 'Build and run unit tests',
)

option(
  'tools',
  type: 'feature',
  value: 'enabled',
  description: 'Build reference command-line tools',
)

option(
  'install_tools',
  type: 'boolean',
  value: false,
  description: 'Install reference command-line tools',
)

option(
  'man_pages',
  type: 'feature',
  value: 'auto',
  description: 'Build manual pages with scdoc',
)

option(
  'planner_adapter',
  type: 'feature',
  value: 'disabled',
  description: 'Build the optional libpkgplan projection adapter',
)
